--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CryptoJS</title>
+    <style>
+        body{ 
+            padding:0;
+            margin: 0
+        }
+    </style>
 </head>
 
 <body>
-
+    <y-key-generator></y-key-generator>
     <script src="index.js" type="module"></script>
 </body>
 
